<resources>
    <string name="app_name">Iuvo</string>
    <string name="hello_world">Hello world!</string>
    <string name="a_picture">A picture.</string>
    <string name="course_count_dummy">0 Courses</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_none">None</string>
    <plurals name="course_count_and_gpa">
        <item quantity="one">%1$d Course, %2$s GPA</item>
        <item quantity="other">%1$d Courses, %2$s GPA</item>
    </plurals>
    <plurals name="semester">
        <item quantity="one">Semester</item>
        <item quantity="other">Semesters</item>
    </plurals>
    <plurals name="group">
        <item quantity="one">Group</item>
        <item quantity="other">Groups</item>
    </plurals>
    <plurals name="course">
        <item quantity="one">Course</item>
        <item quantity="other">Courses</item>
    </plurals>
    <string name="image_drag_handle">Drag handle.</string>
    <string name="menu_manage_groups">Groups</string>
    <string name="menu_manage_semesters">Semesters</string>
    <string name="menu_add_course">Add Course</string>
    <string name="menu_help">Help</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_add">Add</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_save">Save</string>
    <string name="dialog_delete_confirm_title">Delete Confirm</string>
    <string name="dialog_button_delete">Delete</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_name">Name</string>
    <string name="me_excludes_hidden_courses_subheader">Excludes Hidden Courses</string>
	<string name="me_gpa_header">My GPA</string>
    <string name="me_gpa">0.00</string>
    <string name="me_gpa_desc">Overall</string>
    <string name="me_gpa_with_exclusions_desc">with exclusions</string>
    <string name="me_progress_header">My Completion Progress</string>
    <string name="me_progress_percentage">%1$s%%</string>
    <string name="me_progress_percentage_zero" formatted="false">0%</string>
    <string name="me_progress_percentage_desc">Complete</string>
    <string name="me_progress_fraction">%1$d/%2$d</string>
    <string name="me_progress_fraction_zero">0/0</string>
    <string name="me_progress_fraction_desc">Courses</string>
    <string name="me_progress_fraction_hours_desc">Hours</string>
    <string name="me_grade_dist_header">My Grade Distribution</string>
    <string name="me_grade_dist_key_a"><b>%1$s%% A</b></string>
    <string name="me_grade_dist_key_b"><b>%1$s%% B</b></string>
    <string name="me_grade_dist_key_c"><b>%1$s%% C</b></string>
    <string name="me_grade_dist_key_d"><b>%1$s%% D</b></string>
    <string name="me_grade_dist_key_f"><b>%1$s%% F</b></string>
    <string name="me_grade_dist_desc">Degree plan grade distribution</string>
    <string name="me_database_header">My Database</string>
    <string name="me_database_semester_count">0</string>
	<string name="me_database_group_count">0</string>
	<string name="me_database_course_count">0</string>
	<string name="me_database_semester_count_desc">Semester</string>
	<string name="me_database_group_count_desc">Group</string>
	<string name="me_database_course_count_desc">Course</string>
    <string name="plan_no_semester_assigned">No Semester Assigned</string>
    <string name="plan_no_courses_found">There\'s nothing in this group to manage.</string>
    <string name="plan_empty_group"><i>(empty)</i></string>
    <string name="plan_edit_group">Manage</string>
    <string name="more_export_success">Database successfully exported to sdcard/Iuvo.</string>
    <string name="more_export_fail">Export failed! Could not write to file.</string>
    <string name="more_import_success">Database successfully imported from sdcard/Iuvo.</string>
    <string name="more_import_not_found">No database found in sdcard/Iuvo</string>
    <string name="more_import_fail">Import failed!</string>
    <string name="dialog_title_backup_found">Backup Found</string>
    <string name="dialog_backup_found_export">A backup file was found. This backup file will be overwritten. This cannot be undone. Are you sure you want to continue?</string>
    <string name="dialog_backup_found_import">A backup file was found. Your current degree plan will be overwritten. This cannot be undone. Are you sure you want to continue?</string>
    <string name="dialog_button_import">Import</string>
    <string name="dialog_button_export">Export</string>
    <string name="title_activity_points">GPA Scale</string>
	<string name="points_aplus">A+</string>
	<string name="points_a">A</string>
	<string name="points_aminus">A-</string>
	<string name="points_bplus">B+</string>
	<string name="points_b">B</string>
	<string name="points_bminus">B-</string>
	<string name="points_cplus">C+</string>
	<string name="points_c">C</string>
	<string name="points_cminus">C-</string>
	<string name="points_dplus">D+</string>
	<string name="points_d">D</string>
	<string name="points_dminus">D-</string>
	<string name="toast_points_not_saved">Points not saved. One or more entries were left blank.</string>
    <string name="title_activity_groups">Groups</string>
    <string name="dialog_delete_group_confirm_text">Are you sure that you want to delete this group? Any courses under this group will be hidden. This cannot be undone.</string>
    <string name="title_activity_semesters">Semesters</string>
    <string name="dialog_delete_semester_confirm_text">Are you sure that you want to delete this semester? This cannot be undone.</string>
    <string name="title_activity_semester">Add Semester</string>
    <string name="semester_quick_fill">Quick Fill:</string>
    <string name="semester_spring_20xx"><u>"Spring 20XX"</u></string>
    <string name="semester_summer_20xx"><u>"Summer 20XX"</u></string>
    <string name="semester_fall_20xx"><u>"Fall 20XX"</u></string>
    <string name="plan_getting_started_header">Welcome to your degree plan.</string>
    <string name="plan_getting_started_note1">Let\'s face it, placing your entire college or university degree plan into an app probably won\'t be the fastest thing you\'ll ever do, but Iuvo\'s simple interface should make it as quick and easy as possible. With a good amount of effort, we should have a beautiful, flexible, and detailed degree plan set up in no time. Iuvo can then give you statistics about your college career and will continue to do so even as you make changes later on.</string>
    <string name="plan_getting_started_note1_1"><i>Tip: You should back up your degree plan in the \'more\' tab afterwards so that you don\'t lose all of your hard earned work.</i></string>
    <string name="plan_getting_started_note2">First, start off by adding semesters. These aren\'t needed to construct your degree plan, but Iuvo uses your semesters to help \'color-code\' your courses, making it easier to recognize when you took them. If you need help while adding or managing your semesters, hit the \'help\' button that displays at the top of the semesters screen.</string>
    <string name="plan_getting_started_note3">Next, we\'ll add groups. Groups are the basic building block of your degree plan in Iuvo and are used to organize your courses the same that way your actual degree plan does. The courses that you create in the next step will appear under these groups. Without groups, none of your courses will be able to appear on your degree plan at all. If still need help with understanding and using groups, hit the \'help\' button that displays at the top of the groups screen. Once you add your first group, this tutorial will disappear and your degree plan will take its place. You can view this tutorial in the \'more\' tab if you need to read it again.</string>
    <string name="plan_getting_started_note4">Finally, we\'ll complete your degree plan in Iuvo by adding every single course from your curriculum. Courses contain a lot more information than semesters or groups, and are therefore explained in more detail through the \'help\' button in the course screen. You should read this so that you can add all of your courses properly, including transfer credit and credit that is not part of your degree plan. Adding your courses is the final step. Once you\'re done, Iuvo will be able to give you detailed breakdowns about your GPA, grade distribution, and other information in the \'me\' tab.</string>
    <string name="plan_getting_started_note5">Below is a small sample of what your degree plan should look like. It includes a two semesters, two groups, and three courses. Remember, this tutorial will disappear after adding your first group. You can always view it in the \'more\' tab if you need to read it again.</string>
    <string name="plan_getting_started_semester_title">Spring 20XX</string>
    <string name="plan_getting_started_semester_subtitle">X Courses, X GPA</string>
    <string name="plan_getting_started_group_title">Mathematics</string>
    <string name="plan_getting_started_course_title">MATH 151</string>
    <string name="plan_getting_started_course_grade">B+</string>
    <string name="plan_getting_started_course_grade1">"A "</string>
    <string name="plan_getting_started_course_grade2">"B "</string>
    <string name="plan_getting_started_course_grade3">"C "</string>
    <string name="plan_getting_started_sample_group1">Sample Group 1</string>
    <string name="plan_getting_started_sample_group2">Sample Group 2</string>
    <string name="plan_getting_started_sample_semester1">Sample Semester 1</string>
    <string name="plan_getting_started_sample_semester2">Sample Semester 2</string>
    <string name="plan_getting_started_sample_course1">Sample Course 1</string>
    <string name="plan_getting_started_sample_course2">Sample Course 2</string>
    <string name="plan_getting_started_sample_course3">Sample Course 3</string>
    <string name="plan_getting_started_semester_caption"><i>A semester object</i></string>
    <string name="plan_getting_started_group_caption"><i>A group object</i></string>
    <string name="plan_getting_started_course_caption"><i>A course object, as it will appear on your degree plan.</i></string>
    <string name="course_credit_image">A, B, C, D, F</string>
    <string name="course_help_title">Are you a student? Because you must have class.</string>
    <string name="course_help_name">Adding courses to your degree plan is easy. Start off with the name. Call it whatever you want. \"ENGR 123\", \"Calculus II\" or \"I hate [Professor name]!\" are all perfectly acceptable. If you\'re adding a course that has a name with more than one word, such as \"MATH 101\", Iuvo will retain the first word for the next entry, so that you can keep adding math courses without having to repetitively type \"MATH\" every time.</string>
    <string name="course_help_credit">Next up are credit hours and grade. Iuvo should cover all of the possible values for U.S. post-secondary courses. If not, then let the developer know so that it can be included in an update. Some international institutions use grades such as \'O\', \'T\', or \'AA\'. For those, please consider using \'A+\'.\n\n
        Tip: You can edit the GPA point value of your grades in the \'more\' tab of the home screen.</string>
    <string name="course_help_exclude">Some institutions do not include transfer credit in your GPA calculation. If you don’t want Iuvo to include a course in your GPA calculations, just let it know.</string>
    <string name="course_help_group">Assign a group that you created to your course. Your course will appear under that group in your degree plan. Courses that do not have a group assigned to them will be hidden from your degree plan. You can edit your hidden courses in the ‘more’ tab of the home screen.</string>
    <string name="course_help_semester">Finally, assign a semester that you created to your course. Your course will appear in your degree plan while rockin’ that semester’s color.</string>
</resources>