<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    android:clipToPadding="false"
	android:scrollbars="none"
    android:background="@color/theme_white">
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	    
	    <TextView
	        android:id="@+id/course_help_title_textview"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:textColor="@color/theme_gray"
	        android:textSize="26sp"
	        android:text="@string/course_help_title" />
	    
	    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/lvDividerHeight"
        android:background="@color/theme_gray" />
	    
	    <ImageView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:adjustViewBounds="true"
	        android:contentDescription="@string/a_picture"
	        android:src="@drawable/course_help_name" />
	    
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:textColor="@color/theme_gray"
	        android:textSize="14sp"
	        android:text="@string/course_help_name" />
	    
	    <TextView
	        android:id="@+id/course_credit_image_textview"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:textColor="@color/theme_gray"
	        android:textSize="50sp"
	        android:text="@string/course_credit_image" />
	    
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:textColor="@color/theme_gray"
	        android:textSize="14sp"
	        android:text="@string/course_help_credit" />
	    
	    <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />
	    
	    <ImageView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:adjustViewBounds="true"
	        android:contentDescription="@string/a_picture"
	        android:src="@drawable/course_help_exclude" />
	    
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:textColor="@color/theme_gray"
	        android:textSize="14sp"
	        android:text="@string/course_help_exclude" />
	    
	    <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />
	    
	    <ImageView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:adjustViewBounds="true"
	        android:contentDescription="@string/a_picture"
	        android:src="@drawable/course_help_group" />
	    
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:textColor="@color/theme_gray"
	        android:textSize="14sp"
	        android:text="@string/course_help_group" />
	    
	    <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />
	    
	    <ImageView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:adjustViewBounds="true"
	        android:contentDescription="@string/a_picture"
	        android:src="@drawable/course_help_semester" />
	    
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:textColor="@color/theme_gray"
	        android:textSize="14sp"
	        android:text="@string/course_help_semester" />
	    
	</LinearLayout> 
</ScrollView>

